Version 1.0.2 - Cleaned up CSS, fixed skills box scrolling, still bug with right spacing

--- a/style.css
+++ b/style.css
@@ -72,42 +72,6 @@ body {
     margin-bottom: 5px;
 }
 
-.skills-box {
-    background: #282828;
-    height: 450px;
-    overflow: auto;
-    border-radius: 10px;
-    padding: 15px;
-    margin-bottom: 15px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.skills-box::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-}
-
-.skills-box::-webkit-scrollbar-track {
-    background: none;
-    margin: 10px;
-}
-
-.skills-box::-webkit-scrollbar-thumb {
-    background: #3f3f3f;
-    border-radius: 10px;
-}
-
-.skills-box::-webkit-scrollbar-thumb:hover {
-    background: #575757;
-}
-
-.skills-box h2 {
-    padding-bottom: 10px;
-    margin: 0;
-    font-size: 1.2rem;
-    color: #e0e0e0;
-}
-
 .button-container {
     display: flex;
     flex-wrap: wrap;
@@ -116,7 +80,7 @@ body {
 
 }
 
-.skills-box button {
+.button-container button {
     color: #e0e0e0;
     background-color: #3f3f3f;
     border-radius: 10px;
@@ -126,22 +90,46 @@ body {
     transition: background-color 0.2s ease;
 }
 
-.skills-box button:hover {
+.button-container button:hover {
     background-color: #575757;
 }
 
-.skills-box button.selected {
+.button-container button.selected {
     outline: 2px solid #575757;
     background-color: #575757;
 }
 
-.skills-box ul {
-    padding-left: 20px;
+.list-container {
     margin: 10px 0 0;
-    list-style: disc;
+    padding-right: 10px;
+    height: 460px;
+    overflow: auto;
 }
 
-.skills-box ul li {
+.list-container ul {
+    margin: 0;
+    list-style: disc;
+    box-sizing: content-box; 
+}
+
+.list-container::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+.list-container::-webkit-scrollbar-track {
+    background: none;
+}
+.list-container::-webkit-scrollbar-thumb {
+    background: #3f3f3f;
+    border-radius: 10px;
+}
+
+.list-container::-webkit-scrollbar-thumb:hover {
+    background: #575757;
+}
+
+.list-container ul li {
     background-color: #3f3f3f;
     border-radius: 10px;
     padding: 15px;
@@ -152,10 +140,10 @@ body {
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-.skills-box ul li:hover {
+.list-container ul li:hover {
     transform: scale(1.01);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-  }
+}
 
 a {
     color: #e0e0e0;
